# plasmatk

./: .gitignore  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: Makefile  conf.py  example.ipynb  make.bat  requirements.txt
docs/source/: conf.py  index.rst
docs/source/api/: plasmatk.parameters.rst  plasmatk.plotting.rst
src/plasmatk/: __init__.py  parameters.py  plotting.py
src/plasmatk/cpp/: a.cpp  a.txt  b.cpp
tests/: test_parameters.py  test_plotting.py
