[tool.poetry]
name = "plasmatk"
version = "0.6.0"
description = "A collection of tools for plasma physicists"
authors = ["Ryan Park"]
license = "MIT"
readme = "README.md"
include = ["src/pycountsrmpark/cpp/{*.cpp,*.txt}"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = {version = "^1.26.1", python = ">=3.9,<3.13"}
pandas = "^2.1.2"
matplotlib = "^3.8.1"
scipy = {version = "^1.11.3", python = ">=3.9,<3.13"}

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
sphinx = "^7.2.6"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
sphinx-autoapi = "^3.0.0"
python-semantic-release = "^8.3.0"
furo = "^2023.9.10"
sphinx-rtd-theme = "^1.3.0"

[tool.semantic_release]
version_toml = [
    "pyproject.toml:tool.poetry.version",
]
branch = "main"                             # branch to make releases of
changelog_file = "CHANGELOG.md"             # changelog file
build_command = "poetry build"              # build dists
dist_path = "dist/"                         # where to put dists
upload_to_release = true                    # auto-create GitHub release
upload_to_pypi = false                      # don't auto-upload to PyPI
remove_dist = false                         # don't remove dists
patch_without_tag = true                    # patch release by default

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
